[project]
name = "rpi-seism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.7",
    "gpiozero>=2.0.1",
    "obspy>=1.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pyaml>=25.7.0",
    "pydantic>=2.12.5",
    "pyserial>=3.5",
    "websockets>=16.0",
]

[project.scripts]
rpi-seism = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]